[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "invictus"
authors = [
    {name = "Dojo Planner", email = "admin@dojoplanner.com"}
]
dynamic = ["version", "description"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/power19/invictus"
Repository = "https://github.com/power19/invictus.git"

[tool.bench.dev-dependencies]
coverage = "~6.5.0"
Faker = "~13.12.1"
pyngrok = "~5.0.5"

[project.entry-points."frappe.apps"]
invictus = "invictus"